disable adding field values when od sync has errors

--- a/UniFiler10/Views/FolderView.xaml
+++ b/UniFiler10/Views/FolderView.xaml
@@ -124,6 +124,7 @@
 									LostFocus="OnVaalue_LostFocus"									
 									Header="{Binding FieldDescription.Caption, Mode=OneWay}"
 									IsReadOnly="{Binding FieldDescription.IsAnyValueAllowed, Converter={StaticResource TrueToFalseConverter}}"
+									IsReadonly2="{Binding ElementName=me, Path=VM.Briefcase.IsWantAndCannotUseOneDrive, Converter={StaticResource TrueToFalseConverter}}"
 									Style="{StaticResource LolloTextBoxStyle}"
 									DisplayMemberPath="Vaalue"
 									MaxLength="{StaticResource MaxVaalueLength}"
